# Zen-Pivot-Product

./: README.md  pyproject.toml
.github/workflows/: ci.yml
zen_pivot_product/: custom.py  hooks.py  modules.txt
zen_pivot_product/custom_api/: chat_conversation.py  dashboard.py  deck_score.py  deck_upload.py  fsq.py  goggle_signup.py  investor_crm.py  login.py  masters.py  payment_order.py  privacy_policy.py  product_notification.py  profile.py  questions.py  reset_password.py  score_card.py  services.py  sign_up.py  startup_crm.py  subscription_plan.py  suggested_investors.py  support.py  vault.py
zen_pivot_product/zen_pivot_llm/custom/: comment.json  customer.json  customer_group.json  packed_item.json  sales_invoice.json  sales_invoice_item.json
zen_pivot_product/zen_pivot_llm/doctype/azure_ai_playground_settings/: azure_ai_playground_settings.js  azure_ai_playground_settings.json  azure_ai_playground_settings.py  test_azure_ai_playground_settings.py
zen_pivot_product/zen_pivot_llm/doctype/azure_recommended_ai_settings/: azure_recommended_ai_settings.js  azure_recommended_ai_settings.json  azure_recommended_ai_settings.py  test_azure_recommended_ai_settings.py
zen_pivot_product/zen_pivot_llm/doctype/azure_studio_settings/: azure_studio_settings.js  azure_studio_settings.json  azure_studio_settings.py  test_azure_studio_settings.py
zen_pivot_product/zen_pivot_llm/doctype/chat_type_questions/: chat_type_questions.json  chat_type_questions.py
zen_pivot_product/zen_pivot_llm/doctype/city/: city.js  city.json  city.py  test_city.py
(+184 files in other folders)
